booky/css/book.css
/* ... */
main .twice-or-not .checkmark,
main .lend-or-not .checkmark{
    position: absolute;
    top: -2px;
    left: 0;
    height: 20px;
    width: 20px;
    background-color: white;
    border-radius: 2px;
    border: 1px solid #ececec;
}


main .remind-or-not .checkmark{
    position: absolute;
    left: 0;
    height: 20px;
    width: 20px;
    background-color: white;
    border-radius: 2px;
    border: 1px solid #ececec;
}

main .lend-to{align-items: center;}

/* On mouse-over, add a grey background color */
main .reading-status .container:hover input ~ .checkmark,
main .twice-or-not .container:hover input ~ .checkmark,
main .lend-or-not .container:hover input ~ .checkmark,
main .remind-or-not .container:hover input ~ .checkmark{
    background-color: #F1F1F3;
}

/* When the radio button is checked, add a blue background */
main .reading-status .container input:checked ~ .checkmark,
main .twice-or-not .container input:checked ~ .checkmark,
main .lend-or-not .container input:checked ~ .checkmark,
main .remind-or-not .container input:checked ~ .checkmark{
    background-color: white;
}

/* Create the indicator (the dot/circle - hidden when not checked) */
main .reading-status .checkmark:after,
main .twice-or-not .checkmark:after,
main .lend-or-not .checkmark:after,
main .remind-or-not .checkmark:after{
    content: "";
    position: absolute;
    display: none;
}

/* Show the indicator (dot/circle) when checked */
main .reading-status .container input:checked ~ .checkmark:after,
main .twice-or-not .container input:checked ~ .checkmark:after,
main .lend-or-not .container input:checked ~ .checkmark:after,
main .remind-or-not .container input:checked ~ .checkmark:after {
    display: block;
}

/* Style the indicator (dot/circle) */
main .reading-status .container .checkmark:after,
main .twice-or-not .container .checkmark:after,
main .lend-or-not .container .checkmark:after,
main .remind-or-not .container .checkmark:after {
 	top: 4px;
	left: 4px;
	width: 10px;
	height: 10px;
    background: transparent no-repeat center/12px url(../img/tick.svg);
}

.book-button{
    width: 800px;
    margin-bottom: 20px;
    padding-bottom: 30px; 
    text-align: center; 
}

.book-button input{
    width: 210px;
    height: 40px;
    align-self: center;
    letter-spacing: 2px;
    padding-left: 70px;
    border: none;
    margin: 10px;
    font-size: 14px;
    cursor: pointer;
    font-family: "Noto Sans JP", sans-serif;
    color: white;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

/* google calendar  */
.remind-shade{
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    margin:0;
    background-color: white;
    overflow: auto;
    z-index: 100;
    display: flex;
    flex-direction: column;
    align-items: center;
    visibility:hidden;
    opacity:0;
    filter:alpha(opacity=0);
    -webkit-transition:300ms ease;
    -moz-transition:300ms ease;
    -o-transition:300ms ease;
    transition:300ms ease;
}

.remind-img{
  width: 100%;
  position: relative;
  margin-bottom: 70px;
}

.remind-img>img{
    width: 20px;
    height: 20px;
    position: absolute;
    top: 25px;
    right: 65px;
    cursor: pointer;   
}

.remindbar-list{
    display: block;
    text-align: center;
    margin: 0 0 100px 0;
    width:100%;
}
.remindbar-list h5{
    word-spacing: 5px;
    padding: 30px 0 20px 0;
    font-size: 20px;
    font-family: "Martel Sans", sans-serif;
    font-weight: 400;
}

.remind-title {
    width: 100%;
}

.remind-title label,
.remind-start label,
.remind-end label,
.daily-title,
.remind-time label {
    display: inline-block;
    width: 70px;
    color: #BBBBBB;
    font-size: 14px;
    text-align: left;
}


.remind-or-not {
    margin:12px 0;
}

.remind-or-not>span {
    margin-right: 15px;
}

.title-init,
.remindBeforeOuter input{
    cursor: text;
}

.reminder-check #start,
.reminder-check #end{
    cursor: pointer;
}

.title-init{
    width:150px;
    height: 30px;
    letter-spacing: 2px;
    text-align: left;
    padding: 0 0 0 15px ;
    border: none;
    margin: 10px 0 15px 0;
    font-size: 14px;
    font-family: "Noto Sans JP", sans-serif;
    color: #333333;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;    
    border-bottom:1px solid  rgba(185, 177, 68, 1);    
}
.reminder-check #start,
.reminder-check #end{
    width:150px;
    height: 30px;
    letter-spacing: 2px;
    text-align: center;
    padding: 0 0 0 10px ;
    border: none;
    margin: 10px 0 15px 0;
    font-size: 14px;
    font-family: "Noto Sans JP", sans-serif;
    color: #333333;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;    
    border-bottom:1px solid  rgba(185, 177, 68, 1);
}

.remind-or-not .container span:nth-child(1){
    font-size: 14px;
}


.remindBeforeOuter input{
    width:115px;
    height: 30px;
    letter-spacing: 2px;
    text-align: center;
    border: none;
    margin: 10px 0 15px 0;
    font-size: 14px;
    font-family: "Noto Sans JP", sans-serif;
    color: #333333;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;    
    border-bottom:1px solid  rgba(185, 177, 68, 1);
}

.remindBeforeOuter span:nth-child(3){
    font-size: 14px;
    color: #333333;
}

input[type=date]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    display: none;
}

input[type="time"]::-webkit-clear-button {
    -webkit-appearance: none;
    display: none;
}

input[type="time"]::-ms-clear {
    display: none;
}

input::-ms-clear {
    width: 0;
    height: 0;
}

input[type=text]::-ms-clear {
    display: none;
}
/* ... */

